--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>陳定紘的個人網站!!!</title>
+        <title>陳定紘的個人檔案!!!</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
                         <span class="text-primary">陳定紘</span>
                     </h1>
                     <div class="subheading mb-5">
-                        世新資傳大學生
+                        世新資傳大學生!!
                         <a class="masklink" href="mailto:name@email.com">marcoehch@gmail.com</a>
                     </div>
                     <p class="lead mb-5">逆天</p>
