--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>陳定紘的個人檔案!!!</title>
+        <title>陳定紘的個人檔案</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+TC:wght@200..900&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/mystyles.css" rel="stylesheet" />
@@ -42,7 +45,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Marco
-                        <span class="text-primary">陳定紘</span>
+                        <span class="maskserif">陳定紘</span>
                     </h1>
                     <div class="subheading mb-5">
                         世新資傳大學生!!
@@ -64,7 +67,7 @@
                     <h2 class="mb-5">學習經歷</h2> 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
+                            <h3 class="mb-0 maskhl">世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="maskdiv">
                                 <h4 class="maskh4">逆天h4</h4>
@@ -196,9 +199,10 @@
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section maskcallmebg" id="contact">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5 text-white maskcenter">即刻聯絡陳定紘</h2>
+                    <h3 class="text-white maskcenter">有工作機會請找我！</h3>
                    <!-- <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
