--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">工作經歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">網站作品</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">攝影作品</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">即刻聯絡</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">即刻聯絡</a></li>
                 </ul>
             </div>
         </nav>
