--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         世新資傳大學生!!
                         <a class="masklink" href="mailto:name@email.com">marcoehch@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">逆天</p>
+                    <p class="lead mb-5">大家好，我是世新大學資訊傳播學系一乙的陳定紘。我平常熱愛拍照、剪輯影片，透過影像記錄生活，也喜歡寫程式，挑戰各種創意專案。攝影與程式對我來說，不只是技能，更是表達自我與連結世界的方式。如果你對我的作品或想法感興趣，歡迎聯絡我，一起交流或合作！</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
