--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
                     <h2 class="mb-5">學習經歷</h2> 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0 maskhl">世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
+                            <h3>世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="maskdiv">
-                                <h4 class="maskh4">逆天h4</h4>
-                                <p class="w-50 p-5">我咧哥騷肛</p>
+                                <p class="w-50 p-5">世新大學資訊傳播學系融合傳播與資訊技術，培養學生具備數位內容製作、媒體應用與程式設計等跨領域能力。課程涵蓋影像創作、網頁設計、數據分析與新媒體實務，強調理論與實作並重。適合對媒體科技與創意設計有興趣的學生發展多元職涯。</p>
                             </div>   
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2024至今</span></div>
