--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">新店高中</h3>
                             <div class="subheading mb-3">普通科</div>
-                            <p>學店高中：（</p>
+                            <p class="w-50 p-5">新店高中，全名為新北市立新店高級中學，位於新北市新店區，是一所兼具人文與自然環境的優質高中。校園環境優美，設施完善，重視學生多元發展與自主學習。除了扎實的學科課程外，也積極推動社團活動與國際交流，培養學生全方位的能力。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021至2024</span></div>
                     </div>
