--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於我</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">學習經歷</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">工作經歷</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">網站作品</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">程式作品</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">剪輯作品</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">攝影作品</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">即刻聯絡</a></li>
                 </ul>
@@ -85,7 +85,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">工作經歷</h2>
+                    <h2 class="mb-5">程式經歷</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">新店裕隆城勝博殿</h3>
@@ -112,8 +112,8 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <h2 class="mb-5">剪輯作品</h2>
+                    <div class="subheading mb-3">使用的剪輯軟體</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -128,7 +128,7 @@
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">我的作品列表</div>
                     <ul class="fa-ul mb-0">
                        <table class="table table-striped table-hover">
                         <tr class="table-primary">
@@ -183,7 +183,7 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">醜貓咪</h2>
+                    <h2 class="mb-5">攝影作品</h2>
                     <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/1.jpeg" alt="sillycat01" width="30%" class="crap"></a>
                     <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/2.jpeg" alt="sillycat02" width="30%" class="crap"></a>
                     <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/3.jpeg" alt="sillycat03" width="30%" class="crap"></a>
