--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">程式經歷</h2>
+                    <h2 class="mb-5">程式作品</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">新店裕隆城勝博殿</h3>
-                            <div class="subheading mb-3">日式炸豬排店外場服務員
+                            <h3 class="mb-0">Discord簡易對話機器人</h3>
+                            <div class="baby">日式炸豬排店外場服務員
                             </div>
                             <ul class="list-group">
                                 <li class="list-group-item active">特色亮點</li>
@@ -98,7 +98,7 @@
                                 <li class="list-group-item">我不想上班了啦</li>
                         <div class="flex-shrink-0"><span class="text-primary">2024/09 - 至今</span></div>
                             </ul>
-                            <h3 class="baby">老爹嬰兒油</h3>
+                            <h3 class="baby">我的網站</h3>
                             <div class="subheading mb-3">十分逆天</div>
                             <ul class="list-group">
                                 <li class="list-group-item primary">逆天</li>
