--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <h2 class="mb-5">程式作品</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Discord簡易對話機器人</h3>
+                            <h3 class="subheading mb-3">Discord簡易對話機器人</h3>
                             <div class="baby">日式炸豬排店外場服務員
                             </div>
                             <ul class="list-group">
@@ -98,8 +98,8 @@
                                 <li class="list-group-item">我不想上班了啦</li>
                         <div class="flex-shrink-0"><span class="text-primary">2024/09 - 至今</span></div>
                             </ul>
-                            <h3 class="baby">我的網站</h3>
-                            <div class="subheading mb-3">十分逆天</div>
+                            <h3 class="subheading mb-3">我的網站</h3>
+                            <div class="baby">十分逆天</div>
                             <ul class="list-group">
                                 <li class="list-group-item primary">逆天</li>
                                 <li class="list-group-item">逆天逆天</li>
