--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                             <h3 class="subheading mb-3">我的網站</h3>
                             <div class="baby">十分逆天</div>
                             <ul class="list-group">
+                                <li class="list-group-item active">特色亮點</li>
                                 <li class="list-group-item primary">逆天</li>
                                 <li class="list-group-item">逆天逆天</li>
                                 <li class="list-group-item">逆天逆天逆天</li>
