--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="subheading mb-3">Discord簡易對話機器人</h3>
-                            <div class="baby">日式炸豬排店外場服務員
+                            <div class="baby">誰不喜歡會聊天的機器人？
                             </div>
                             <ul class="list-group">
                                 <li class="list-group-item active">特色亮點</li>
-                                <li class="list-group-item">幫你加爆高麗菜</li>
-                                <li class="list-group-item">吃豬排吃到胖死</li>
-                                <li class="list-group-item">我不想上班了啦</li>
+                                <li class="list-group-item">會跟你說早安</li>
+                                <li class="list-group-item">他是一隻很酷的蟑螂</li>
+                                <li class="list-group-item">目前在開發抽獎指令</li>
                             </ul>
                             <h3 class="subheading mb-3">我的網站</h3>
-                            <div class="baby">十分逆天</div>
+                            <div class="baby">就是現在這個！</div>
                             <ul class="list-group">
                                 <li class="list-group-item active">特色亮點</li>
-                                <li class="list-group-item primary">逆天</li>
-                                <li class="list-group-item">逆天逆天</li>
-                                <li class="list-group-item">逆天逆天逆天</li>
+                                <li class="list-group-item“>我的第一個網站</li>
+                                <li class="list-group-item">能看出我的個人特色</li>
+                                <li class="list-group-item">能幫助你聯絡我</li>
                             </ul>
                 </div>
             </section>
