--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item active">特色亮點</li>
                                 <li class="list-group-item“>我的第一個網站</li>
-                                <li class="list-group-item">能看出我的個人特色</li>
+                                <li class="list-group-item">能簡單地看完我的作品</li>
                                 <li class="list-group-item">能幫助你聯絡我</li>
                             </ul>
                 </div>
