--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於我</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">學習經歷</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">程式作品</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">我的興趣</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">剪輯作品</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">攝影作品</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">即刻聯絡</a></li>
@@ -85,7 +85,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">程式作品</h2>
+                    <h2 class="mb-5">我的興趣</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="subheading mb-3">Discord簡易對話機器人</h3>
@@ -106,6 +106,36 @@
                                 <li class="list-group-item">能幫助你聯絡我</li>
                             </ul>
                 </div>
+                        <div class="card-group">
+                        <div class="card">
+                          <img src="assets/picture/steve.jpeg" class="crap" alt="iamsteve">
+                          <div class="card-body">
+                            <h5 class="card-title">I am Steve</h5>
+                            <p class="card-text">LA LA LA LAVA</p>
+                          </div>
+                          <div class="card-footer">
+                            <small class="text-muted">CHI CHI CHI CHICKEN</small>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img src="assets/picture/cum.jpg" class="crap" alt="cominginhot">
+                          <div class="card-body">
+                            <h5 class="card-title">Coming in hot</h5>
+                            <p class="card-text">RELEASEEEEEEEEEE</p>
+                          </div>
+                          <div class="card-footer">
+                            <small class="text-muted">THE NEATHER</small>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img src="assets/picture/chicken.jpg" class="crap" alt="chickenjockey">
+                          <div class="card-body">
+                            <h5 class="card-title">Chicken Jockey</h5>
+                            <p class="card-text">You want me to fight a chicken?</p>
+                          </div>
+                          <div class="card-footer">
+                            <small class="text-muted">CHICKEN JOCKEY</small>
+                          </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
