--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         世新資傳大學生
                         <a class="masklink" href="mailto:name@email.com">marcoehch@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">大家好，我是世新大學資訊傳播學系一乙的陳定紘。我平常熱愛拍照、剪輯影片，透過影像記錄生活，也喜歡寫程式，挑戰各種創意專案。攝影與程式對我來說，不只是技能，更是表達自我與連結世界的方式。如果你對我的作品或想法感興趣，歡迎聯絡我，一起交流或合作！</p>
+                    <p class="lead mb-5">大家好，我是世新大學資訊傳播學系一乙的陳定紘。我平常會剪輯影片和寫程式，只要想到有挑戰的主題和內容我都會嘗試去做。我同時也很喜歡講屁話跟打遊戲，如果你對我的作品或想法感興趣或是想打遊戲，歡迎聯絡我！</p>
                 </div>
             </section>
             <hr class="m-0" />
