--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <h3>世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="maskdiv">
-                                <p class="w-50 p-5">世新大學資訊傳播學系融合傳播與資訊技術，培養學生具備數位內容製作、媒體應用與程式設計等跨領域能力。課程涵蓋影像創作、網頁設計、數據分析與新媒體實務，強調理論與實作並重。適合對媒體科技與創意設計有興趣的學生發展多元職涯。</p>
+                                <p class="w-50 p-5">偶爾會去學校上課</p>
                             </div>   
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2024至今</span></div>
@@ -74,7 +74,7 @@
                             <h3 class="mb-0">新店高中<a class="masklink" href="https://www.htsh.ntpc.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
                             <div class="subheading mb-3">普通科</div>
                             <div class="maskdiv">
-                            <p class="w-50 p-5">新店高中，全名為新北市立新店高級中學，位於新北市新店區，是一所兼具人文與自然環境的優質高中。校園環境優美，設施完善，重視學生多元發展與自主學習。除了扎實的學科課程外，也積極推動社團活動與國際交流，培養學生全方位的能力。</p>
+                            <p class="w-50 p-5">除了少數老師和少數正常同學以外基本上沒有可以拿出來說好的</p>
                             </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021至2024</span></div>
