--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         <div class="card">
                           <img src="assets/picture/steve.jpeg" class="crap" alt="iamsteve">
                           <div class="card-body">
-                            <h5 class="card-title">I am Steve</h5>
-                            <p class="card-text">LA LA LA LAVA</p>
+                            <h5 class="card-title">Rainbow six siege</h5>
+                            <p class="card-text">室內戰術攻堅第一人稱射擊</p>
                           </div>
                           <div class="card-footer">
                             <small class="text-muted">CHI CHI CHI CHICKEN</small>
