--- a/index.html
+++ b/index.html
@@ -90,33 +90,33 @@
                         <div class="flex-grow-1">
                         <div class="card-group">
                         <div class="card">
-                          <img src="assets/picture/steve.jpeg" class="crap" alt="iamsteve">
+                          <img src="assets/picture/R6.png" class="crap" alt="iamsteve">
                           <div class="card-body">
-                            <h5 class="card-title">Rainbow six siege</h5>
-                            <p class="card-text">室內戰術攻堅第一人稱射擊</p>
+                            <h5 class="card-title">打遊戲</h5>
+                            <p class="card-text">Rainbow six siege</p>
                           </div>
                           <div class="card-footer">
-                            <small class="text-muted">CHI CHI CHI CHICKEN</small>
+                            <small class="text-muted">室內戰術攻堅第一人稱射擊</small>
                           </div>
                         </div>
                         <div class="card">
-                          <img src="assets/picture/cum.jpg" class="crap" alt="cominginhot">
+                          <img src="assets/picture/davinci.png" class="crap" alt="cominginhot">
                           <div class="card-body">
-                            <h5 class="card-title">Coming in hot</h5>
-                            <p class="card-text">RELEASEEEEEEEEEE</p>
+                            <h5 class="card-title">影片剪輯</h5>
+                            <p class="card-text">用Davinci剪</p>
                           </div>
                           <div class="card-footer">
-                            <small class="text-muted">THE NEATHER</small>
+                            <small class="text-muted">有靈感就會剪</small>
                           </div>
                         </div>
                         <div class="card">
-                          <img src="assets/picture/chicken.jpg" class="crap" alt="chickenjockey">
+                          <img src="assets/picture/bass.png" class="crap" alt="chickenjockey">
                           <div class="card-body">
-                            <h5 class="card-title">Chicken Jockey</h5>
-                            <p class="card-text">You want me to fight a chicken?</p>
+                            <h5 class="card-title">樂器</h5>
+                            <p class="card-text">偶爾拿出來彈，自學初學者</p>
                           </div>
                           <div class="card-footer">
-                            <small class="text-muted">CHICKEN JOCKEY</small>
+                            <small class="text-muted">我是長髮男這很正常</small>
                           </div>
             </section>
             <hr class="m-0" />
