--- a/index.html
+++ b/index.html
@@ -124,35 +124,20 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">剪輯作品</h2>
-                    <div class="subheading mb-3">使用的剪輯軟體</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
                     <div class="subheading mb-3">我的作品列表</div>
                     <ul class="fa-ul mb-0">
                        <table class="table table-striped table-hover">
                         <tr class="table-primary">
                             <th>排序</th>
-                            <th>原諒</th>
-                            <th>國動</th>
-                            <th>統神</th>
+                            <th>影片</th>
+                            <th>主題</th>
+                            <th>連結</th>
                         </tr>
                         <tr>
-                            <td>排序</td>
-                            <td>鄭勝融<a class="masklink" href="https://www.youtube.com/watch?v=dMTy6C4UiQ4" target="_blank"><i class="fa-solid fa-link"></i></a></td>
-                            <td>林子傑</td>
-                            <td>吃很多牡蠣</td>
+                            <td>1</td>
+                            <td>BOOM - bbno$ Valorant Clips</td>
+                            <td>遊戲</td>
+                            <td>連結<a class="masklink" href="https://www.youtube.com/watch?v=3EEeHALZWlA" target="_blank"><i class="fa-solid fa-link"></i></a></td>
                         </tr>
                        </table>
                        <div class="card-group">
