--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <td>1</td>
                             <td>BOOM - bbno$ Valorant Clips</td>
                             <td>遊戲</td>
-                            <td>連結<a class="masklink" href="https://www.youtube.com/watch?v=3EEeHALZWlA" target="_blank"><i class="fa-solid fa-link"></i></a></td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=3EEeHALZWlA" target="_blank"><i class="fa-solid fa-link"></i></a></td>
                         </tr>
                        </table>
                        <div class="card-group">
