--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <p class="card-text">用Davinci剪</p>
                           </div>
                           <div class="card-footer">
-                            <small class="text-muted">有靈感就會剪</small>
+                            <small class="text-muted">有靈感或是空間不夠就會剪</small>
                           </div>
                         </div>
                         <div class="card">
@@ -131,50 +131,26 @@
                             <th>排序</th>
                             <th>影片</th>
                             <th>主題</th>
-                            <th>連結</th>
                         </tr>
                         <tr>
                             <td>1</td>
                             <td>BOOM - bbno$ Valorant Clips</td>
-                            <td>遊戲</td>
+                            <td>遊戲精華</td>
                             <td><a class="masklink" href="https://www.youtube.com/watch?v=3EEeHALZWlA" target="_blank"><i class="fa-solid fa-link"></i></a></td>
                         </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>虹彩六號在2025.exe</td>
+                            <td>遊戲搞笑精華</td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=R-_08qSglC0&t=9s" target="_blank"><i class="fa-solid fa-link"></i></a></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>用鬥陣做音樂報告</td>
+                            <td>真的就是音樂報告</td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=7UORlS80lew" target="_blank"><i class="fa-solid fa-link"></i></a></td>
+                        </tr>
                        </table>
-                       <div class="card-group">
-                        <div class="card">
-                          <img src="assets/picture/steve.jpeg" class="crap" alt="iamsteve">
-                          <div class="card-body">
-                            <h5 class="card-title">I am Steve</h5>
-                            <p class="card-text">LA LA LA LAVA</p>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">CHI CHI CHI CHICKEN</small>
-                          </div>
-                        </div>
-                        <div class="card">
-                          <img src="assets/picture/cum.jpg" class="crap" alt="cominginhot">
-                          <div class="card-body">
-                            <h5 class="card-title">Coming in hot</h5>
-                            <p class="card-text">RELEASEEEEEEEEEE</p>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">THE NEATHER</small>
-                          </div>
-                        </div>
-                        <div class="card">
-                          <img src="assets/picture/chicken.jpg" class="crap" alt="chickenjockey">
-                          <div class="card-body">
-                            <h5 class="card-title">Chicken Jockey</h5>
-                            <p class="card-text">You want me to fight a chicken?</p>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">CHICKEN JOCKEY</small>
-                          </div>
-                        </div>
-                      </div>
-                    </ul>
-                </div>
-            </section>
             <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
