--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">攝影作品</h2>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/1.jpeg" alt="sillycat01" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/2.jpeg" alt="sillycat02" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/3.jpeg" alt="sillycat03" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/4.jpeg" alt="sillycat04" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/5.jpeg" alt="sillycat05" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/6.jpeg" alt="sillycat06" width="30%" class="crap"></a>
+                    <a href="assets/picture/69.jpg" target="_blank"><img src="mano.jpg" alt="sillycat01" width="30%" class="crap"></a>
+                    <a href="assets/picture/69.jpg" target="_blank"><img src="ramen.jpg" alt="sillycat02" width="30%" class="crap"></a>
+                    <a href="assets/picture/69.jpg" target="_blank"><img src="fumo.jpg" alt="sillycat03" width="30%" class="crap"></a>
+                    <a href="assets/picture/69.jpg" target="_blank"><img src="rocky.jpg" alt="sillycat04" width="30%" class="crap"></a>
+                    <a href="assets/picture/69.jpg" target="_blank"><img src="sky.jpg" alt="sillycat05" width="30%" class="crap"></a>
+                    <a href="assets/picture/69.jpg" target="_blank"><img src="sea.jpg" alt="sillycat06" width="30%" class="crap"></a>
                 </div>
             </section>
             <hr class="m-0" />
