--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
             <!-- Awards-->
             <section class="resume-section maskcallmebg" id="contact">
                 <div class="resume-section-content">
-                    <h2 class="mb-5 text-white maskcenter">即刻聯絡陳定紘</h2>
-                    <h3 class="text-white maskcenter">有工作機會請找我！</h3>
+                    <h2 class="mb-5 maskcenter">即刻聯絡陳定紘</h2>
+                    <h3 class="maskcenter">有工作機會請找我！</h3>
                    <!-- <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
