--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             Place - James Buchanan High School - Hackathon 2005
                         </li>
                     </ul> -->
-                    <div class="social-icons mt-5">
+                    <div class="social-icons mt-5 maskcenter">
                         <a class="social-icon" href="https://steamcommunity.com/id/30996654388729103/" target="_blank"><i class="fa-brands fa-steam"></i></a>
                         <a class="social-icon" href="mailto:marcoehch@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/_mask.r1nne_?igsh=Ynpnc2duaWk3M3h1&utm_source=qr" target="_blank"><i class="fa-brands fa-instagram"></i></a>
