--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">攝影作品</h2>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/mano.png" alt="sillycat01" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/ramen.png" alt="sillycat02" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/fumo.png" alt="sillycat03" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/rocky.png" alt="sillycat04" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/sky.png" alt="sillycat05" width="30%" class="crap"></a>
-                    <a href="assets/picture/69.jpg" target="_blank"><img src="assets/picture/sea.png" alt="sillycat06" width="30%" class="crap"></a>
+                    <a><img src="assets/picture/mano.png" alt="sillycat01" width="30%" class="crap"></a>
+                    <a href="https://www.instagram.com/kakurega_tw/" target="_blank"><img src="assets/picture/ramen.png" alt="sillycat02" width="30%" class="crap"></a>
+                    <a href="https://www.instagram.com/fumonofficial/" target="_blank"><img src="assets/picture/fumo.png" alt="sillycat03" width="30%" class="crap"></a>
+                    <a><img src="assets/picture/rocky.png" alt="sillycat04" width="30%" class="crap"></a>
+                    <a><img src="assets/picture/sky.png" alt="sillycat05" width="30%" class="crap"></a>
+                    <a href="https://www.taiwan.net.tw/m1.aspx?sNo=0001105&id=9727" target="_blank"><img src="assets/picture/sea.png" alt="sillycat06" width="30%" class="crap"></a>
                 </div>
             </section>
             <hr class="m-0" />
