--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <h3>世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="maskdiv">
-                                <p class="w-50 p-5">偶爾會去學校上課</p>
+                                <p class="w-50">偶爾會去學校上課</p>
                             </div>   
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2024至今</span></div>
@@ -74,7 +74,7 @@
                             <h3 class="mb-0">新店高中<a class="masklink" href="https://www.htsh.ntpc.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
                             <div class="subheading mb-3">普通科</div>
                             <div class="maskdiv">
-                            <p class="w-50 p-5">除了少數老師和少數正常同學以外基本上沒有可以拿出來說好的</p>
+                            <p class="w-50">除了少數老師和少數正常同學以外基本上沒有可以拿出來說好的</p>
                             </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021至2024</span></div>
