--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h2 class="mb-5">學習經歷</h2> 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3>世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
+                            <h3>世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-graduation-cap"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="maskdiv">
                                 <p class="w-50">偶爾會去學校上課</p>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">新店高中<a class="masklink" href="https://www.htsh.ntpc.edu.tw/" target="_blank"><i class="fa-solid fa-link"></i></a></h3>
+                            <h3 class="mb-0">新店高中<a class="masklink" href="https://www.htsh.ntpc.edu.tw/" target="_blank"><i class="fa-solid fa-school"></i></a></h3>
                             <div class="subheading mb-3">普通科</div>
                             <div class="maskdiv">
                             <p class="w-50">除了少數老師和少數正常同學以外基本上沒有可以拿出來說好的</p>
@@ -136,19 +136,19 @@
                             <td>1</td>
                             <td>BOOM - bbno$ Valorant Clips</td>
                             <td>遊戲精華</td>
-                            <td><a class="masklink" href="https://www.youtube.com/watch?v=3EEeHALZWlA" target="_blank"><i class="fa-solid fa-link"></i></a></td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=3EEeHALZWlA" target="_blank"><i class="fa-brands fa-youtube"></i></a></td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td>虹彩六號在2025.exe</td>
                             <td>遊戲搞笑精華</td>
-                            <td><a class="masklink" href="https://www.youtube.com/watch?v=R-_08qSglC0&t=9s" target="_blank"><i class="fa-solid fa-link"></i></a></td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=R-_08qSglC0&t=9s" target="_blank"><i class="fa-brands fa-youtube"></i></a></td>
                         </tr>
                         <tr>
                             <td>3</td>
                             <td>用鬥陣做音樂報告</td>
                             <td>真的就是音樂報告</td>
-                            <td><a class="masklink" href="https://www.youtube.com/watch?v=7UORlS80lew" target="_blank"><i class="fa-solid fa-link"></i></a></td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=7UORlS80lew" target="_blank"><i class="fa-brands fa-youtube"></i></a></td>
                         </tr>
                        </table>
             <hr class="m-0" />
