--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="masklink" href="mailto:name@email.com">marcoehch@gmail.com</a>
                     </div>
                     <div class="maskabout">
-                    <p>大家好，我是世新大學資訊傳播學系一乙的陳定紘。我平常會剪輯影片和寫程式，只要想到有挑戰的主題和內容我都會嘗試去做。我同時也很喜歡講屁話跟打遊戲，如果你對我的作品或想法感興趣或是想打遊戲，歡迎聯絡我！</p>
+                    <p class="lead mb-5">大家好，我是世新大學資訊傳播學系一乙的陳定紘。我平常會剪輯影片和寫程式，只要想到有挑戰的主題和內容我都會嘗試去做。我同時也很喜歡講屁話跟打遊戲，如果你對我的作品或想法感興趣或是想打遊戲，歡迎聯絡我！</p>
                     </div>
                 </div>
             </section>
