--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <h3 class="mb-0">新店高中<a class="masklink" href="https://www.htsh.ntpc.edu.tw/" target="_blank"><i class="fa-solid fa-school"></i></a></h3>
                             <div class="subheading mb-3">普通科</div>
                             <div class="maskdiv">
-                            <p class="w-50 p-5">除了少數老師和少數正常同學以外基本上沒有可以拿出來說好的</p>
+                            <p class="p-5">大部分同學跟老師都挺不正常的然後合作社吃的很多很爽</p>
                             </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021至2024</span></div>
