--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <a class="social-icon" href="mailto:marcoehch@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/_mask.r1nne_?igsh=Ynpnc2duaWk3M3h1&utm_source=qr" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/share/168CajnBGt/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a class="social-icon" href="#about"><i class="fa-solid fa-up-long"></i></a>
+                        <a class="maskgotop" href="#about"><i class="fa-solid fa-up-long"></i></a>
                     </div>
                 </div>
             </section>
