--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5 maskcenter">即刻聯絡陳定紘</h2>
                     <h3 class="maskcenter">有工作機會請找我！</h3>
-                    <a class="maskgotop nigger" href="#about"><i class="fa-solid fa-up-long"></i></a>
+                    <a class="maskgotop fixed nigger" href="#about"><i class="fa-solid fa-up-long"></i></a>
                    <!-- <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
