--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                         <div class="flex-grow-1">
                         <div class="card-group">
                         <div class="card">
-                          <img src="assets/picture/R6.png" class="crap" alt="iamsteve">
+                          <img src="assets/picture/csnigger.gif" class="crap" alt="iamsteve">
                           <div class="card-body">
                             <h5 class="card-title">打遊戲</h5>
-                            <p class="card-text">Rainbow six siege</p>
+                            <p class="card-text">CS2/p>
                           </div>
                           <div class="card-footer">
-                            <small class="text-muted">室內戰術攻堅第一人稱射擊</small>
+                            <small class="text-muted">FPS遊戲</small>
                           </div>
                         </div>
                         <div class="card">
