--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
                           <div class="card-footer">
                             <small class="text-muted">我是長髮男這很正常</small>
                           </div>
+                        <div class="card">
+                          <img src="assets/picture/bass.png" class="crap" alt="chickenjockey">
+                          <div class="card-body">
+                            <h5 class="card-title">樂器</h5>
+                            <p class="card-text">偶爾拿出來彈，自學初學者</p>
+                          </div>
+                          <div class="card-footer">
+                            <small class="text-muted">我是長髮男這很正常</small>
+                          </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
