--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                           <img src="assets/picture/csnigger.gif" class="crap" alt="iamsteve">
                           <div class="card-body">
                             <h5 class="card-title">打遊戲</h5>
-                            <p class="card-text">CS2</p>
+                            <p class="card-text">CS2 Valorant R6</p>
                           </div>
                           <div class="card-footer">
                             <small class="text-muted">FPS遊戲</small>
