--- a/index.html
+++ b/index.html
@@ -128,39 +128,36 @@
                     <h2 class="mb-5">剪輯作品</h2>
                     <div class="subheading mb-3">我的作品列表</div>
                     <ul class="fa-ul mb-0">
-                       <section class="resume-section" id="skills">
-  <div class="resume-section-content">
-    <h2 class="mb-5">剪輯作品</h2>
-    <div class="subheading mb-3">我的作品列表</div>
-
-    <div class="video-grid">
-      <!-- 作品 1 -->
-      <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/3EEeHALZWlA" frameborder="0"
-          allowfullscreen></iframe>
-        <h4>BOOM - bbno$ Valorant Clips</h4>
-        <p>遊戲精華</p>
-      </div>
-
-      <!-- 作品 2 -->
-      <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/R-_08qSglC0" frameborder="0"
-          allowfullscreen></iframe>
-        <h4>虹彩六號在2025.exe</h4>
-        <p>遊戲搞笑精華</p>
-      </div>
-
-      <!-- 作品 3 -->
-      <div class="video-card">
-        <iframe src="https://www.youtube.com/embed/7UORlS80lew" frameborder="0"
-          allowfullscreen></iframe>
-        <h4>用鬥陣做音樂報告</h4>
-        <p>真的就是音樂報告</p>
-      </div>
-    </div>
-  </div>
-</section>
-
+                     <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">剪輯作品</h2>
+                    <div class="subheading mb-3">我的作品列表</div>
+                    <ul class="fa-ul mb-0">
+                       <table class="table table-striped table-hover">
+                        <tr class="table-primary">
+                            <th>排序</th>
+                            <th>影片</th>
+                            <th>主題</th>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>BOOM - bbno$ Valorant Clips</td>
+                            <td>遊戲精華</td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=3EEeHALZWlA" target="_blank"><i class="fa-brands fa-youtube"></i></a></td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>虹彩六號在2025.exe</td>
+                            <td>遊戲搞笑精華</td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=R-_08qSglC0&t=9s" target="_blank"><i class="fa-brands fa-youtube"></i></a></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>用鬥陣做音樂報告</td>
+                            <td>真的就是音樂報告</td>
+                            <td><a class="masklink" href="https://www.youtube.com/watch?v=7UORlS80lew" target="_blank"><i class="fa-brands fa-youtube"></i></a></td>
+                        </tr>
+                       </table>
             <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
