--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
                     <h2 class="mb-5 maskcenter">即刻聯絡陳定紘</h2>
                     <h3 class="maskcenter">有工作機會請找我！</h3>
                     <a class="maskgotop fixed gotop-button" href="#about"><i class="fa-solid fa-up-long"></i></a>
+                    <div class="about-image">
+                          <img src="assets/picture/boomcat.gif" alt="爆炸貓" />
+                    </div>
+                
                    <!-- <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
