--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <h3 class="maskcenter">有工作機會請找我！</h3>
                     <a class="maskgotop fixed gotop-button" href="#about"><i class="fa-solid fa-up-long"></i></a>
                     <div class="about-image">
-                          <img src="assets/picture/boomcat.gif" alt="爆炸貓" />
+                          <img src="assets/picture/maxwell.gif" alt="爆炸貓" />
                     </div>
                 
                    <!-- <ul class="fa-ul mb-0">
