--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <h2 class="mb-5 maskcenter">即刻聯絡陳定紘</h2>
                     <h3 class="maskcenter">有工作機會請找我！</h3>
                     <a class="maskgotop fixed gotop-button" href="#about"><i class="fa-solid fa-up-long"></i></a>
-                    <div class="about-image">
+                    <div class="about-maxwellimage">
                           <img src="assets/picture/maxwell.gif" alt="爆炸貓" />
                     </div>
                 
