--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                     <div class="about-image">
-                          <img src="assets/picture/boomcat.gif" alt="爆炸貓" />
+                          <img href="peecat.gif" target="_blank" src="assets/picture/boomcat.gif" alt="爆炸貓" />
                     </div>
             </section>
             <hr class="m-0" />
