--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                     <div class="about-image">
-                          <a href="peecat.gif" target="_blank"><img src="assets/picture/boomcat.gif" alt="爆炸貓" /></a>
+                          <a href="assets/picture/peecat.gif" target="_blank"><img src="assets/picture/boomcat.gif" alt="爆炸貓" /></a>
                     </div>
             </section>
             <hr class="m-0" />
