--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                             <h3>世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-graduation-cap"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="maskdiv">
-                                <p class="w-50 p-5">偶爾會去學校上課</p>
+                                <span class="">偶爾</span>
+                                <p class="w-50 p-5">會去學校上課</p>
                             </div>   
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2024至今</span></div>
