--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <h3>世新大學<a class="masklink" href="https://ics.wp.shu.edu.tw/" target="_blank"><i class="fa-solid fa-graduation-cap"></i></a></h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div class="maskdiv">
-                                <span class="span">偶爾</span>
+                                <span class="red">偶爾</span>
                                 <p class="w-50 p-5">會去學校上課</p>
                             </div>   
                         </div>
